03 Sept 8
---------
* Moved SendPaste to CCP_Main to implicitly use Target

+ static bool CDataTable::DeleteParent( long lParentID )
  . Deletes all records in Data Table with the given "lParentID"
  
+ Show Target Name in Status (TitleBar)

+ Ensure Connected to Clipboard Viewer Chain using dummy WM_DRAWCLIPBOARD
  CClipboardViewer:
  *	OnCreate: SetTimer(TIMER_ENSURE_VIEWER_IN_CHAIN, ONE_MINUTE, 0);
  * WM_CV_RECONNECT - force reconnect if not in chain.
	* WM_CV_IS_CONNECTED - performs a ping of chain.


03 Sept 5
---------
+ Snap to window now works on multiple monitors


03 Sept 4
---------
+ Ditto window snaps to window sides


03 Sept 3
---------
+ Text Item Parser in CopyProperties - parses a CF_TEXT item into multiple
  CF_TEXT items based upon a given separator string.
  + CEdit m_ParseEdit
  + CButton m_ParseButton
  + void OnBnClickedParseButton()
  + Misc 
    + BYTE GetEscapeChar( BYTE ch );
    + CString RemoveEscapes( const char* str );

+ CClip::AddFormat

+ CClipList::AddToDB( bool bLatestTime = false, bool bShowStatus = true )

* CClipFormat frees m_hgData on destruction

* changed CCP_MainApp::SaveAllClips to CCP_MainApp::SaveCopyClips

* changed CCP_MainApp::FixTime to CClip::MakeLatestTime()

! fixed bad connect / disconnect logic in CClipboardViewer


03 Sept 2
---------
* ProcessCopy - redesigned to fix the fast copy bugs.
  . The same source object is used for the description as is stored in the db.
  . Actual copying from the clipboard is (usually) not interrupted.
  + CClip - For managing a Clip (copy of the clipboard) as a single unit.
  + CCopyThread - handles copying the clipboard when the clipboard changes and
      safely communicating with the Main thread.
  + CClipboardViewer - the Clipboard Viewer window (code factored out from
      MainWnd)
  + uses AllowDuplicates (non-sequential duplicates) flag

* ProcessPaste - redesigned for delayed rendering during drag and drop and
  immediate rendering otherwise.